# Chymeraal_Head_Tracker

./: pyproject.toml
.github/workflows/: ci.yml
quest_sender/app/: build.gradle
quest_sender/app/src/main/: AndroidManifest.xml
quest_sender/app/src/main/java/com/chymeraal/headtracker/: MainActivity.kt
src/Chymeraal_Head_Tracker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/chymeraal_head_tracker/: gui.py  main.py  orientation.py  quest_tracker.py
tests/unit/: test_demo.py  test_quest_tracker.py
