[project]
name = "Chymeraal_Head_Tracker"
version = "0.1.0"
description = "Head Tracking you VR set easily"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
mypy_path = ["src"]
explicit_package_bases = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "chymeraal_head_tracker.*"
ignore_missing_imports = false
